--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,146 +1,123 @@
 <mat-sidenav-container>
-        <mat-sidenav mode="over" [(opened)]="menuopen" style="background-color:#5b9d9d;">
-        <mat-toolbar color="#5b9d9d">
-            <mat-icon style="color: wheat;">account_circle</mat-icon>
-            <span style="width: 80%; padding:10px ;">user name</span>
-            <mat-icon (click)="menuopen=false" style="display: flex; justify-content: flex-end;">navigate_before</mat-icon>
-        </mat-toolbar>
-
-        <hr style="border: none; border-top: 1px dashed #000000;"/>
-
-        
-        <div class="container">
-            <div *ngIf="true" (click)="openPage('login')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;">login </span>
-            </div>
-            <div *ngIf="true" (click)="openPage('register')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;">register </span>
-            </div>
-            <div *ngIf="true" (click)="openPage('driverdashboard')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;"> driverdashboard </span>
-            </div>
-            <div *ngIf="true" (click)="openPage('driver')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;">driver </span>
-            </div>
-            <div *ngIf="false" (click)="openPage('driverdata')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon><span> driverdata </span></div>
-            <div *ngIf="true" (click)="openPage('vehicle')" style="display: flex; align-items: center;">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;">vehicle </span>
-            </div>
-            <div *ngIf="false" (click)="openPage('vehicledata')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;"> vehicledata </span>
-            </div>
-            <div *ngIf="true" (click)="openPage('company')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;">company </span>
-            </div>
-            <div *ngIf="false" (click)="openPage('companydata')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;"> companydata </span>
-            </div>
-            <div *ngIf="true" (click)="openPage('route')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;">route </span>
-            </div>
-            <div *ngIf="false" (click)="openPage('routedata')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;"> routedata </span>
-            </div>
-
-
-            <div *ngIf="true" (click)="openPage('driverregister')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;"> driverregister </span>
-           </div>
-            <div *ngIf="true" (click)="openPage('drivercheckin')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;"> drivercheckin </span>
-            </div>
-            <div *ngIf="true" (click)="openPage('driverwork')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;"> driverwork </span>
-            </div>
-            <div *ngIf="true" (click)="openPage('driverworkreport')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;"> driverworkreport </span>
-            </div>
-
-
-            <div *ngIf="true" (click)="openPage('confirmjob')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;"> confirmjob </span>
-            </div>
-            <div *ngIf="true" (click)="openPage('lmap')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;">lmap </span>
-            </div>
-
-            <hr style="border: none; border-top: 1px dashed #000000;"/>
-
-            <div *ngIf="true" (click)="openPage('planactive')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;"> planactive </span>
-            </div>
-            <div *ngIf="false" (click)="openPage('planactivedata')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;"> planactivedata </span>
-            </div>
-            <div *ngIf="true" (click)="openPage('planmaster')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;"> planmaster </span>
-            </div>
-            <div *ngIf="false" (click)="openPage('planmasterdata')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;"> planmasterdata </span>
-            </div>
-            <div *ngIf="true" (click)="openPage('plan')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;">plan </span>
-            </div>
-            <div *ngIf="false" (click)="openPage('plandata')" style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px;">menu</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;"> plandata </span>
-            </div>
-
-            <hr style="border: none; border-top: 1px dashed #000000;"/>
-
-            <div style="display: flex; align-items: center; line-height:3" class="clickable-div">
-                <mat-icon style="margin-right: 20px; color:wheat;">input icon</mat-icon>
-                <span style="text-transform: uppercase; font-weight: 500;"> Sign out </span>
-            </div>
-
+    <mat-sidenav mode="over" [(opened)]="menuopen" style="background-color: #1e88e5;">
+      <mat-toolbar style="background-color: #1976d2;">
+        <mat-icon style="color: #b3e5fc;">account_circle</mat-icon>
+        <span style="width: 80%; padding: 10px; color: white;">User Name</span>
+        <mat-icon (click)="menuopen=false" style="color: white; display: flex; justify-content: flex-end;">navigate_before</mat-icon>
+      </mat-toolbar>
+  
+      <div class="container">
+        <div *ngIf="true" (click)="openPage('login')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item">login </span>
         </div>
+        <div *ngIf="true" (click)="openPage('register')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item">register </span>
+        </div>
+        <div *ngIf="true" (click)="openPage('driverdashboard')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item"> driverdashboard </span>
+        </div>
+        <div *ngIf="true" (click)="openPage('driver')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item">driver </span>
+        </div>
+        <div *ngIf="false" (click)="openPage('driverdata')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon><span> driverdata </span></div>
+        <div *ngIf="true" (click)="openPage('vehicle')" style="display: flex; align-items: center;">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item">vehicle </span>
+        </div>
+        <div *ngIf="false" (click)="openPage('vehicledata')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item"> vehicledata </span>
+        </div>
+        <div *ngIf="true" (click)="openPage('company')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item">company </span>
+        </div>
+        <div *ngIf="false" (click)="openPage('companydata')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item"> companydata </span>
+        </div>
+        <div *ngIf="true" (click)="openPage('route')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item">route </span>
+        </div>
+        <div *ngIf="false" (click)="openPage('routedata')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item"> routedata </span>
+        </div>
+        <div *ngIf="true" (click)="openPage('driverregister')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item"> driverregister </span>
+       </div>
+        <div *ngIf="true" (click)="openPage('drivercheckin')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item"> drivercheckin </span>
+        </div>
+        <div *ngIf="true" (click)="openPage('driverwork')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item"> driverwork </span>
+        </div>
+        <div *ngIf="true" (click)="openPage('driverworkreport')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item"> driverworkreport </span>
+        </div>
+        <div *ngIf="true" (click)="openPage('confirmjob')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item"> confirmjob </span>
+        </div>
+        <div *ngIf="true" (click)="openPage('lmap')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item">lmap </span>
+        </div>
+        <div *ngIf="true" (click)="openPage('planactive')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item"> planactive </span>
+        </div>
+        <div *ngIf="false" (click)="openPage('planactivedata')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item"> planactivedata </span>
+        </div>
+        <div *ngIf="true" (click)="openPage('planmaster')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item"> planmaster </span>
+        </div>
+        <div *ngIf="false" (click)="openPage('planmasterdata')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item"> planmasterdata </span>
+        </div>
+        <div *ngIf="true" (click)="openPage('plan')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item">plan </span>
+        </div>
+        <div *ngIf="false" (click)="openPage('plandata')"  class="clickable-div">
+            <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+            <span class="menu-item"> plandata </span>
+        </div>
+    </div>
     </mat-sidenav>
-
-
-
+  
     <mat-sidenav-content>
-
-        <mat-toolbar class="navbar" color="primary" *ngIf="true">
-
-            <div>
-                <mat-icon class="navmenu" (click)="showMenu()" style="margin-right: 20px;">menu</mat-icon>
-                <img src="../assets/images/sym_g.png" style="height: 35px;">
-                <span style="color: white; font-size:medium;">Driver</span>
-            </div>
-
-            <div>
-                <mat-icon class="navmenu">info icon </mat-icon> 
-                <span class="navtxt"> About</span>
-
-                <mat-icon class="navmenu">description icon </mat-icon> 
-                <span class="navtxt"> Manual</span>
-            </div>
-
-        </mat-toolbar>
-
-        <router-outlet></router-outlet>
-
+      <mat-toolbar class="navbar" style="background-color: #1976d2;">
+        <div class="d-flex flex-wrap align-items-center">
+          <mat-icon class="navmenu" (click)="showMenu()" style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
+          <img src="../assets/images/sym_g.png" style="height: 35px;">
+          <span style="color: #8fbeed; font-size: medium;">Driver</span>
+        </div>
+  
+        <div class="d-flex flex-wrap align-items-center">
+          <mat-icon class="navmenu" style="color: #b3e5fc;">info</mat-icon>
+          <span class="navtxt">About</span>
+  
+          <mat-icon class="navmenu" style="color: #b3e5fc;">description</mat-icon>
+          <span class="navtxt">Manual</span>
+        </div>
+      </mat-toolbar>
+  
+      <router-outlet></router-outlet>
     </mat-sidenav-content>
-</mat-sidenav-container>
+  </mat-sidenav-container>
+  
