--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,35 @@ body {
 }
 
 .mat-drawer-container {
-    background-color: #ededed;
+    background-color: transparent;
+    overflow: hidden;
 }
+
+.mat-drawer-inner-container {
+    width: 100%;
+    height: 100%;
+  
+}
+
+/* Apply custom styles to the scrollbar */
+.mat-sidenav-container ::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+.mat-sidenav-container ::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 10px;
+}
+
+.mat-sidenav-container ::-webkit-scrollbar-thumb {
+    background: #0957a5;
+    border-radius: 10px;
+}
+
+.mat-sidenav-container ::-webkit-scrollbar-thumb:hover {
+    background: #0957a5;
+}
+
 
 @import "~leaflet/dist/leaflet.css"
