--- a/src/app/page/driverdashboard/driverdashboard.component.html
+++ b/src/app/page/driverdashboard/driverdashboard.component.html
@@ -37,81 +37,83 @@
         
     </div>
   </div>
+  
+</div>
 
-  <!-- Driver Detail -->
-  <div *ngIf="show" class="row">
-    <div class="row no-gutters mx-1">
+<!-- Driver Detail -->
+  <div *ngIf="show" class="row d-flex justify-content-start align-items-center no-gutters mx-2 mt-5 mb-1">
+    <div class="row d-flex justify-content-center align-items-center  no-gutters">
       <!-- Back Button Container -->
-      <div class="col-1 d-flex justify-content-start align-items-center">
-        <button mat-icon-button>
+      <div class="col-1 d-flex justify-content-start align-items-center no-gutters">
+        <button mat-icon-button class="no-gutters">
           <mat-icon>keyboard_arrow_left</mat-icon>
         </button>
       </div>
+
       <!-- Company Names Container (Scrollable) -->
-      <div class="col-10 d-flex flex-wrap align-items-center justify-content-center" style="overflow-x: auto;">
-        <div class="{{isDesktop == 5 ? 'col-2':'col-10'}} m-2" *ngFor="let comp of dashboardData.slice(0,isDesktop)" style="background-color: white; border-radius: 10px;">
-          <div class="row mx-2">
-            <div class="col-8 d-flex justify-content-center align-items-center">
-              <span style="font-weight:500; text-transform:uppercase;">{{ comp.companyname }}</span>
+      <div class="col-10 d-flex flex-wrap align-items-center justify-content-center no-gutters" style="overflow-x: auto;">
+        <div class="{{isDesktop == 6 ? 'col-2':'col-11'}} ishadow no-gutters" *ngFor="let comp of dashboardData.slice(0,isDesktop)">
+          <div class="row mx-1 no-gutters">
+            <div class="col-5 d-flex justify-content-center align-items-center no-gutters">
+              <span style="font-weight:500; font-size:smaller; text-transform:uppercase;">{{ comp.companyname }}</span>
             </div>
-            <div class="col-4">
-              <div class="row justify-content-end">                
-                <div class="col-12 d-flex justify-content-center rounded-circle text-white text-center icircle mt-2" style="background-color:darkgreen;">
+            <div class="col-5 no-gutters">
+              <div class="row justify-content-end no-gutters">                
+                <div class="col-10 d-flex justify-content-center rounded-circle text-white text-center icircle mt-2 no-gutters" style="background-color:darkgreen;">
                   {{comp.listdriver.length}}
                 </div>
-                <div class="col-12" style="color:black; margin: -2px -5px 0px 0px; font-size:x-small; width:80%;">
-                  <mat-icon>group</mat-icon>
+                <div class="col-10 no-gutters d-flex justify-content-end rounded-circle" style="color:black; margin: -2px -5px 0px 0px; font-size:x-small; width:80%;">
+                  <mat-icon style="font-size:medium;">group</mat-icon>
                 </div>
               </div>
             </div>
           </div>
-          <div class="row mx-1"><hr style="border: none; border-top: 1px dashed gray; margin:0px 1px 2px -1px"/></div>
-          <div class="row justify-content-center m-1">
+          <div class="row mx-1 no-gutters"><hr style="border: none; border-top: 1px dashed gray; margin:0px 0px 2px 0px"/></div>
+          <div class="row justify-content-center m-1 no-gutters">
 
-            <div class="col-3 d-flex justify-content-center align-items-center" style="background-color: #116bd2; color: white;">
-              <div class="row text-center mt-1">
+            <div class="col-3 d-flex justify-content-center align-items-center no-gutters" style="background-color: #116bd2; color: white;">
+              <div class="row text-center mt-1 no-gutters">
                 <div class="col-12"><mat-icon style="font-size:small;padding-top:4px;margin-bottom:-8px;">access_time</mat-icon></div>
                 <div class="col-12"><span class="font-weight-bold">{{ comp.totalwakeup }}</span></div>
               </div>
             </div>
 
-            <div class="col-3 d-flex justify-content-center align-items-center" style="background-color: #fb0000; color:white">
-              <div class="row text-center">
+            <div class="col-3 d-flex justify-content-center align-items-center no-gutters" style="background-color: #fb0000; color:white">
+              <div class="row text-center no-gutters">
                 <div class="col-12"><mat-icon style="font-size:small;padding-top:4px;margin-bottom:-8px;">local_bar</mat-icon></div>
                 <div class="col-12"><span class="font-weight-bold">{{ comp.totalalgohol }}</span></div>
               </div>
             </div>
 
-            <div class="col-3 d-flex justify-content-center align-items-center" style="background-color:orange;color:white">
-              <div class="row text-center">
+            <div class="col-3 d-flex justify-content-center align-items-center no-gutters" style="background-color:orange;color:white">
+              <div class="row text-center no-gutters">
                 <div class="col-12"><mat-icon style="font-size:small;padding-top:4px;margin-bottom:-8px;;"><span style="font-size:8px; font-family:Verdana; font-weight:bold;">TEMP</span></mat-icon></div>
                 <div class="col-12"><span class="font-weight-bold">{{ comp.totaltemp }}</span></div>
               </div>
             </div>
 
-            <div class="col-3 d-flex justify-content-center align-items-center" style="background-color: #5c8f4e;color:white">
-              <div class="row text-center">
+            <div class="col-3 d-flex justify-content-center align-items-center no-gutters" style="background-color: #5c8f4e;color:white">
+              <div class="row text-center no-gutters">
                 <div class="col-12"><mat-icon style="font-size:small;padding-top:4px;margin-bottom:-8px;">directions_car</mat-icon></div>
                 <div class="col-12"><span class="font-weight-bold">{{ comp.totalstart }}</span></div>
               </div>
             </div>
 
-
           </div>
-          <div class="row mx-1"><hr style="border: none; border-top: 1px dashed gray; margin:2px -1px 5px -1px"/></div>
         </div>
       </div>
+
       <!-- Next Button Container -->
-      <div class="col-1 d-flex justify-content-end align-items-center">
-        <button mat-icon-button>
+      <div class="col-1 d-flex justify-content-end align-items-center no-gutters">
+        <button mat-icon-button class="no-gutters">
           <mat-icon>keyboard_arrow_right</mat-icon>
         </button>
       </div>
     </div>
   </div>
-  <div *ngIf="show" class="row mt-4 d-flex flex-wrap justify-content-start">
+  <div *ngIf="show" class="row mt-5 mx-2 d-flex flex-wrap justify-content-start">
     <div class="col-lg-3 col-sm-12 my-2" *ngFor="let driver of listdriver" style="gap: 20px;">
-      <div class="col-12" style="background-color:white;border-radius:10px;">
+      <div class="col-12 ishadow">
 
             <!-- Driver Information -->
             <div class="row px-1 pt-2 d-flex flex-wrap align-items-center" style="margin: 0;">
@@ -224,10 +226,20 @@
     </div>
   </div>
 
-  <!-- Driver Dashboard All-->
-  <div *ngIf="!show" class="row m-2">
-  a
-  
-  
-  </div>
 
+<!-- Driver Dashboard All-->
+<div *ngIf="!show" class="mx-1 row">
+  <div class="{{isDesktop === 5 ? 'col-1':'col-4'}}" style="background-color: #5c8f4e;">a</div>
+  <div class="{{isDesktop === 5 ? 'col-1':'col-4'}}" style="background-color: #5c8f4e;">a</div>
+  <div class="{{isDesktop === 5 ? 'col-1':'col-4'}}" style="background-color: #5c8f4e;">a</div>
+  <div class="{{isDesktop === 5 ? 'col-1':'col-4'}}" style="background-color: #5c8f4e;">a</div>
+  <div class="{{isDesktop === 5 ? 'col-1':'col-4'}}" style="background-color: #5c8f4e;">a</div>
+  <div class="{{isDesktop === 5 ? 'col-1':'col-4'}}" style="background-color: #5c8f4e;">a</div>
+  
+  <div class="{{isDesktop === 5 ? 'col-1':'col-4'}}" style="background-color: #5c8f4e;">a</div>
+  <div class="{{isDesktop === 5 ? 'col-1':'col-4'}}" style="background-color: #5c8f4e;">a</div>
+  <div class="{{isDesktop === 5 ? 'col-1':'col-4'}}" style="background-color: #5c8f4e;">a</div>
+  <div class="{{isDesktop === 5 ? 'col-1':'col-4'}}" style="background-color: #5c8f4e;">a</div>
+  <div class="{{isDesktop === 5 ? 'col-1':'col-4'}}" style="background-color: #5c8f4e;">a</div>
+  <div class="{{isDesktop === 5 ? 'col-1':'col-4'}}" style="background-color: #5c8f4e;">a</div>
+</div>
