--- a/src/app/page/driverdashboard/driverdashboard.component.scss
+++ b/src/app/page/driverdashboard/driverdashboard.component.scss
@@ -88,6 +88,12 @@
   padding: 5;
 }
 
+.ishadow{ 
+  box-shadow: 0px 2px 5px -1px #00000066;
+  background-color:white;
+  border-radius:10px;
+}
+
 .icon-nonpass {
   width: 30px;
   height: 30px;
